--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "base64-arraybuffer": "^1.0.2",
     "jwt-decode": "3.1.2",
     "lottie-react-native": "^6.7.0",
+    "lucide-react-native": "^0.408.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-actions-sheet": "^0.9.0-alpha.24",
@@ -70,6 +71,7 @@
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-snackbar": "^2.6.2",
     "react-native-spinkit": "^1.5.1",
+    "react-native-svg": "^15.4.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-tts": "^4.1.0",
     "react-redux": "^8.1.2",
